style(responsive): Fix title on mobile view

--- a/src/components/interest/spotify/spotifyPlaylist.module.css
+++ b/src/components/interest/spotify/spotifyPlaylist.module.css
@@ -21,7 +21,7 @@
     }
 
     .title {
-        font-size: 1.5rem;
+        font-size: 2rem;
         margin: 1rem;
     }
 }
